<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SensorSystemUI</string>
    <string name="action_settings">미구현</string>
    <string name="title_section1">조도센서 현황</string>
    <string name="title_section2">조명가동율</string>
    <string name="title_section3">스케줄 설정</string>
    <string name="title_section4">조명기구사용현황</string>
    <string name="title_section5">조도설정</string>
    <string name="title_invert_transformer">Invert Transformer</string>
    <string name="title_transform_right">RightAngle Transformer</string>
    <string name="title_transform_combi">Transformer Combination</string>
    <string name="peek">Peek a boo!</string>
    <string name="led01">거실(LED01)</string>
    <string name="led02">부엌(LED02)</string>
    <string name="led03">배란다(LED03)</string>
    <string name="led04">작은방(LED04)</string>
    <string name="led05">큰방(LED05)</string>
    <string name="led06">신발장(LED06)</string>
    <string name="led07">욕실(LED07)</string>
    <string name="led08">뒷배란다(LED08)</string>    
    <string name="per01">38%</string>    
    <string name="per02">56%</string>    
    <string name="per03">75%</string>    
    <string name="per04">86%</string>    
    <string name="per05">75%</string>    
    <string name="per06">71%</string>    
    <string name="per07">3%</string>    
    <string name="per08">15%</string>        
    <string name="hour01">1d 13h</string>
    <string name="hour02">12h</string>
    <string name="hour03">4d 3h</string>
    <string name="hour04">2d 10h</string>
    <string name="hour05">23h</string>
    <string name="hour06">1d 22h</string>
    <string name="hour07">16h</string>
    <string name="hour08">2d 2h</string>
    <string name="bacon">현재 UI만 개발되었습니다. 내용을 채워야해요.</string>
    <!-- Application -->
	<color name="holo_blue_light">#ff33b5e5</color>
	
    <!-- Math Alarm Activity -->
    <string name="title_activity_set_alarms">Set Alarm</string>
    <string name="no_alarms">No alarms have been set</string>
    
    <string name="button_new">New</string>
    
    <!-- Menu -->
    <string name="menu_item_new">New</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_delete">Cancel</string>    
    <string name="menu_item_rate">Rate on Goolge Play</string>
    <string name="menu_item_website">Website</string>
    <string name="menu_item_report">Report a Bug</string>
    
    <!-- Alert -->
	<string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="decimal_button_text">,</string>
	<string name="clear_button_text">Clear</string>
	<string name="minus_button_text">-</string>
	
	
	<color name="title_background_color">#000000</color>
		
	<string name="button_delete">Delete</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>

</resources>
