<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#EEEEEE"
    android:id="@+id/opview"
    android:padding="0dp">
    <LinearLayout 
        android:id="@+id/opgraph"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">
    </LinearLayout>    
    <HorizontalScrollView 
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/ophscroll" 
        android:padding="10dp">
        <GridLayout 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:columnCount="5"
            android:rowCount="2"
            android:orientation="horizontal">
            <TextView 
                android:id="@+id/led01"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:gravity="left"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:text="@string/led01"/>
            <TextView 
                android:id="@+id/led02"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:gravity="left"
                android:singleLine="true"                
                android:ellipsize="marquee"
                android:text="@string/led02"/>
            <TextView 
                android:id="@+id/led03"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:gravity="left"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:text="@string/led03"/>
            <TextView 
                android:id="@+id/led04"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:gravity="left"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:text="@string/led04"/>
            <TextView 
                android:id="@+id/led05"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:gravity="left"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:text="@string/led05"/>
            <TextView 
                android:id="@+id/per01"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:gravity="left"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:text="@string/per01"/>
            <TextView 
                android:id="@+id/per02"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:gravity="left"
                android:singleLine="true"
                android:text="@string/per02"/>
            <TextView 
                android:id="@+id/per03"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:gravity="left"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:text="@string/per03"/>
            <TextView 
                android:id="@+id/per04"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:gravity="left"
                android:text="@string/per04"/>
            <TextView 
                android:id="@+id/per05"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:gravity="left"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:text="@string/per05"/>
        </GridLayout>   
    </HorizontalScrollView>

</LinearLayout>